examples/negative/parser_syntax/unterminated_string.kai
# Negative fixture (#520 / parser): a string literal opens with
# `"` but the line ends before the closing quote. Lexer must
# reject with "unterminated string".

fn main() : Int {
  let s = "open
  0
}
